AdviceGenerator: Fix divider size on small screen

--- a/advice-generator-app-main/style.css
+++ b/advice-generator-app-main/style.css
@@ -57,7 +57,7 @@ p {
   background-image: url("images/pattern-divider-desktop.svg");
   background-position: center;
   background-repeat: no-repeat;
-  background-size: contain;
+  background-size: cover;
 
   min-height: 12px;
   width: 100%;
